Nav: fix duplicated overlapping background effect

--- a/static/static/css/blog.css
+++ b/static/static/css/blog.css
@@ -58,8 +58,11 @@ ul, ol, dl {
   font-size: 1.1rem;
   text-shadow: 0px 1px 1px rgba(200, 200, 200, 0.4);
 }
-.top-bar, .contain-to-grid {
-  background: linear-gradient( rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.2) 95% );
+.top-bar {
+  background: none;
+}
+.contain-to-grid {
+  background: rgba(0, 0, 0, 0.333);
   margin-bottom: 15px;
 }
 .top-bar.expanded .title-area {
